--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -4,20 +4,26 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-4 text-center">
-      <img src="{% static 'images/nobody.jpg' %}" width="75%" />
+      <img src="{% static 'images/default.jpg' %}" width="75%" />
     </div>
     <div class="col-8">
       <!-- Title goes between these h2 tags -->
+      {% if about %}
       <h2>{{ about.title }}</h2>
       <!-- Content goes directly underneath this -->
       {{ about.content | safe }}
+      {% else %}
+      <h2>About</h2>
+      <p class="text-muted">No About content is available yet.</p>
+      {% endif %}
     </div>
   </div>
   <div class="row">
     <div class="col text-right">
       <!-- Updated on field goes in here -->
-
+      {% if about %}
       <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
+      {% endif %}
     </div>
   </div>
 </div>
