--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,28 +1,38 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock head_title %}
+{% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="container py-5">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-8 col-lg-6">
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+      <h3>{% trans "Sign Up" %}</h3>
 
-      <h1 class="mb-4">{% trans "Sign Up" %}</h1>
-
-      <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-      <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+      <p>{% blocktrans %}
+        Welcome back to the code|star blog.
+        Do you already have an account? Then please
+        <a class="link" href="{{ login_url }}">sign in</a>
+        instead.
+      {% endblocktrans %}</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+      <form class="signup" id="signup_form" method="post"
+        action="{% url 'account_signup' %}">
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        <input type="hidden" name="{{ redirect_field_name }}"
+          value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="btn btn-primary mt-2" type="submit">{% trans "Sign Up" %} &raquo;</button>
+        <button class="btn btn-signup right" type="submit">
+          {% trans "Sign Up" %} &raquo;</button>
       </form>
-
     </div>
   </div>
 </div>
-{% endblock content %}
+
+{% endblock %}
