--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -1,30 +1,40 @@
 {% extends 'base.html' %}
-{% block content %}
 {% load static %}
+{% load crispy_forms_tags %}
+
+{% block content %}
 <div class="container mt-5">
-  <div class="row">
-    <div class="col-4 text-center">
-      <img src="{% static 'images/default.jpg' %}" width="75%" />
+    <div class="row">
+        <div class="col-12 col-md-4 text-center">
+            <img src="{% static 'images/nobody.jpg' %}" width="75%">
+        </div>
+        <div class="col-12 col-md-8">
+            <h2>{{ about.title }}</h2>
+            {{ about.content | safe }}
+        </div>
     </div>
-    <div class="col-8">
-      <!-- Title goes between these h2 tags -->
-      {% if about %}
-      <h2>{{ about.title }}</h2>
-      <!-- Content goes directly underneath this -->
-      {{ about.content | safe }}
-      {% else %}
-      <h2>About</h2>
-      <p class="text-muted">No About content is available yet.</p>
-      {% endif %}
+    <div class="row">
+        <div class="col text-right">
+          <!-- Updated on field goes in here -->
+    
+          <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
+        </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col text-right">
-      <!-- Updated on field goes in here -->
-      {% if about %}
-      <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
-      {% endif %}
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6 my-5">
+            <h2>Let's collaborate!</h2>
+            <p>I believe in the power of shared knowledge and collective effort.
+                Whether you have a project in mind, wish to co-author
+                an article, or simply want to brainstorm some ideas,
+                I'm excited to hear from you. Fill out the form
+                and we can get the ball rolling!</p>
+
+            <form method="post">
+                {% csrf_token %}
+                {{ collaborate_form|crispy }}
+                <button type="submit" class="btn btn-secondary mt-2">Submit</button>
+            </form>
+        </div>
     </div>
-  </div>
 </div>
 {% endblock content %}
