--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 <div class="masthead">
     <div class="container">
@@ -72,6 +73,22 @@
                 </div>
                 <!-- Our for loop ends here -->
                 {% endfor %}
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8 card mb-4">
+            <div class="card-body">
+                {% if user.is_authenticated %}
+                <h3>Leave a comment:</h3>
+                <form method="post">
+                    {% csrf_token %}
+                    {{ comment_form|crispy }}
+                    <button type="submit" class="btn btn-secondary">Submit</button>
+                </form>
+                {% else %}
+                <p><a href="{% url 'account_login' %}">Log in</a> to leave a comment.</p>
+                {% endif %}
             </div>
         </div>
     </div>
