--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -6,7 +6,15 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-12 col-md-4 text-center">
-            <img src="{% static 'images/nobody.jpg' %}" width="75%">
+            {% if about.profile_image and about.profile_image.url %}
+                {% if "placeholder" in about.profile_image.url %}
+                    <img src="{% static 'images/nobody.jpg' %}" width="75%" alt="placeholder image">
+                {% else %}
+                    <img src="{{ about.profile_image.url }}" width="75%" alt="{{ about.title }}">
+                {% endif %}
+            {% else %}
+                <img src="{% static 'images/nobody.jpg' %}" width="75%" alt="no image available">
+            {% endif %}
         </div>
         <div class="col-12 col-md-8">
             <h2>{{ about.title }}</h2>
@@ -20,6 +28,7 @@
           <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
         </div>
     </div>
+    {#
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 my-5">
             <h2>Let's collaborate!</h2>
@@ -36,5 +45,6 @@
             </form>
         </div>
     </div>
+    #}
 </div>
 {% endblock content %}
