Update: user stories, about page, README, and deployment fixes

--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -9,6 +9,14 @@
     {% endif %}
     <div class="about-content">
       {{ about.content|linebreaks }}
+      <div class="about-description mt-4">
+        <p>
+          Welcome to our Blog App! This platform is designed to help you share your thoughts, stories, and expertise with a vibrant online community. Whether you're a seasoned writer or just starting out, our intuitive interface makes it easy to create, edit, and publish blog posts.
+        </p>
+        <p>
+          You can comment on posts, collaborate with other users, and explore a wide range of topics. Our app supports rich text editing, media uploads, and interactive features to enhance your blogging experience. Join us and become part of a growing network of creators and readers!
+        </p>
+      </div>
     </div>
   </div>
 
